// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tooltip should be defined and match its snapshot. 1`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  right: 0;
  top: 0;
  -webkit-transform: translate3d(0,-8px,0);
  -ms-transform: translate3d(0,-8px,0);
  transform: translate3d(0,-8px,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 1`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  top: 0;
  -webkit-transform: translate3d(0,-8px,0);
  -ms-transform: translate3d(0,-8px,0);
  transform: translate3d(0,-8px,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 2`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  top: 0;
  -webkit-transform: translate3d(0px,-8px,0);
  -ms-transform: translate3d(0px,-8px,0);
  transform: translate3d(0px,-8px,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 3`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  right: 0;
  top: 0;
  -webkit-transform: translate3d(0,-8px,0);
  -ms-transform: translate3d(0,-8px,0);
  transform: translate3d(0,-8px,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 4`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  top: 0;
  -webkit-transform: translate3d(8px,0,0);
  -ms-transform: translate3d(8px,0,0);
  transform: translate3d(8px,0,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 5`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  top: 0;
  -webkit-transform: translate3d(8px,0px,0);
  -ms-transform: translate3d(8px,0px,0);
  transform: translate3d(8px,0px,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 6`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  bottom: 0;
  -webkit-transform: translate3d(8px,0,0);
  -ms-transform: translate3d(8px,0,0);
  transform: translate3d(8px,0,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 7`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  right: 0;
  top: 0;
  -webkit-transform: translate3d(0,8px,0);
  -ms-transform: translate3d(0,8px,0);
  transform: translate3d(0,8px,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 8`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  top: 0;
  -webkit-transform: translate3d(0px,8px,0);
  -ms-transform: translate3d(0px,8px,0);
  transform: translate3d(0px,8px,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 9`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  top: 0;
  -webkit-transform: translate3d(0,8px,0);
  -ms-transform: translate3d(0,8px,0);
  transform: translate3d(0,8px,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 10`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  bottom: 0;
  -webkit-transform: translate3d(-8px,0,0);
  -ms-transform: translate3d(-8px,0,0);
  transform: translate3d(-8px,0,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 11`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  top: 0;
  -webkit-transform: translate3d(-8px,0px,0);
  -ms-transform: translate3d(-8px,0px,0);
  transform: translate3d(-8px,0px,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;

exports[`Component: Tooltip should render all the different tooltip positions. 12`] = `
.c1 {
  position: absolute;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 1;
  min-width: 10rem;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  transition: visibility 250ms ease-in-out,opacity 250ms ease-in-out;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  color: white;
  padding: 0.5rem;
  border-radius: 4px;
  left: 0;
  top: 0;
  -webkit-transform: translate3d(-8px,0,0);
  -ms-transform: translate3d(-8px,0,0);
  transform: translate3d(-8px,0,0);
  white-space: normal;
  width: auto;
}

.c1.active {
  opacity: 1;
  visibility: visible;
}

.c2 {
  position: absolute;
  box-sizing: border-box;
  border-radius: inherit;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: black;
}

.c3 {
  position: relative;
  z-index: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  className="c0 anchor-tooltip"
  content="This is a tooltip"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button>
    Hover
  </button>
  <div
    className="c1 anchor-tooltip-element"
    color="white"
    height={0}
    spacing={8}
    width={0}
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      This is a tooltip
    </div>
  </div>
</div>
`;
